<resources>
    <string name="app_name">U2_A_a14felipecm</string>
    <string name="action_settings">Settings</string>
    <string name="text_clear"> Clear</string>
    <string name="text_button"> Add / Clear</string>
    <string name="text_label"> Here is where you will see the text that you type</string>
    <string name="text_hint"> Type some text and press the button</string>
    <string name="text_red"> Red</string>
    <string name="text_blue"> Blue</string>
    <string name="text_start"> Start</string>
    <string name="text_stop"> Stop</string>
    <string name="text_image"> Rua Nova Street - Santiago de Compostela</string>
    <string name="text_toast_gal"> You have selected a Galician province</string>
    <string name="text_toast_no_gal"> You have not selected a Galician Province</string>

    <!--Strings para el array de provincias-->
    <string name="arrprov_coru">A Coruna</string>
    <string name="arrprov_lugo">Lugo</string>
    <string name="arrprov_pont">Pontevedra</string>
    <string name="arrprov_oren">Orense</string>
    <string name="arrprov_leon">Leon</string>


</resources>
