<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".U2_A_a14felipecm">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:showDividers="end">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint"
            android:inputType="textCapWords"
            android:id="@+id/editText_principal"
            android:background="@color/verdeChillon"
         />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_clear"
            android:id="@+id/checkBox_clear" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button"
            android:id="@+id/button_add"
            android:layout_gravity="center"
            android:onClick="engadirClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/text_label"
            android:id="@+id/textView_final"
            android:textColor="@color/rojo"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="@dimen/cero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_red"
                android:id="@+id/radioButton_rojo"
                android:checked="true"
                android:onClick="cambiarCorTexto"
                 />

            <RadioButtonappend
                android:layout_width="@dimen/cero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_blue"
                android:id="@+id/radioButton_azul"
                android:onClick="cambiarCorTexto"
                />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:showDividers="end">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spin_provincias"
            android:entries="@array/provincias"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:showDividers="end">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/santiago"
            android:id="@+id/imageView_foto"
            android:scaleType="center"
            android:tag="@string/text_image"
            android:onClick="mostrarTagImagen"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom">

        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temporizador"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/chronometer"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/text_start"
            android:textOn="@string/text_stop"
            android:id="@+id/switch_tempo"
            android:layout_gravity="center_horizontal"
            android:onClick="pulsarChrono"

            />

    </LinearLayout>

</LinearLayout>
